# yardbird

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  analyze_core.py  artifact-setup.sh  benchmark-gen.sh  install_hooks.sh  main_eval.py  terraform_runner.py  test.json  yardbird-bench.py
.github/workflows/: format.yml  garden.yml
.hooks/: pre-commit
baml_rust/: Cargo.toml  README.md
baml_rust/.openapi-generator/: FILES
baml_rust/docs/: AnalysisType.md  AnalyzeCounterexampleRequest.md  BamlAudio.md  BamlAudioBase64.md  BamlAudioUrl.md  BamlImage.md  BamlImageBase64.md  BamlImageUrl.md  BamlOptions.md  BamlOptionsClientRegistry.md  BamlPdf.md  BamlPdfBase64.md  BamlPdfUrl.md  BamlVideo.md  BamlVideoBase64.md  BamlVideoUrl.md  Check.md  ClientProperty.md  DefaultApi.md  InvariantCandidate.md  InvariantSuggestions.md  ProposeInvariantRequest.md  SuggestLemmasRequest.md  VerificationContext.md  VerificationRequest.md
baml_schemas/: .gitignore  README.md  package-lock.json  package.json
baml_schemas/baml_src/: clients.baml  invariant_functions.baml  schemas.baml  verification_functions.baml
benches/: vmt.rs
benchmark-synth/: .gitignore  README.md  pyproject.toml
benchmark-synth/src/benchmark_synth/: __init__.py  cli.py  config.py  export_dataset.py  families.py  generate.py  ir.py  lower_vmt.py  manifests.py  metadata.py  mutators.py  naming.py  run_yardbird.py  validate.py
benchmark-synth/src/benchmark_synth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
benchmark-synth/tests/: test_generation.py  test_ir.py  test_lower_vmt.py  test_validation.py
benchmark_configs/: comprehensive.yaml  paper_evaluation.yaml  quick_test.yaml
coop/: Cargo.toml  README.md
coop/src/: main.rs
examples/: array_append2_array_horn.vmt  array_bubble_sort.vmt  array_horn_copy2.vmt  array_partial_init.vmt  array_single_elem_increm.vmt  array_split_16.vmt
examples/array/: array_bubble_sort.vmt  array_scatter.vmt  array_scatter_instrumented.vmt  array_split_08.vmt  array_split_09.vmt  array_split_12.vmt  array_split_12_test.vmt
examples/bvlist/: bvlist_crypto_shuffle.vmt  bvlist_error_correction.vmt  bvlist_merkle_proof.vmt  bvlist_packet_filter.vmt
examples/list/: len_is_n.vmt  list_append_length.vmt  list_copy.vmt  list_equiv_3.vmt  list_head_tail_cons.vmt  list_init_const.vmt  list_iterative_build.vmt  list_reverse_length.vmt  list_single_elem.vmt
examples/smt2/: 024_gcc.smt2  array_bitvec_minimal.smt2  array_bitvec_simple.smt2  com.galois.ecc.P384ECC64.mul_inner4.short.smt2
examples/smtlib/: incremental.smt2  simple_sat.smt2  simple_unsat.smt2  uf_example.smt2
garden/: Cargo.toml  abstract-runs-d-10-t-30.json  benchmark_config.yaml  compare_json.py  concrete-runs-d-0-t-30.json
garden/src/: config.rs  main.rs
lab/: README.md  worker_bootstrap.sh
notes/: z3-stats.org
paper-graphics/: README.md  analyze.py  comparison_figure_generator.py  egraph_generator.py  main.py  pyproject.toml  tikz_generator.py  unique_solves.py
paper-graphics/egraphs/: array_copy.json  egraph_generator.py  starting_array.json
paper-graphics/report/: __init__.py  build_report.py  template.typ
paper-graphics/src/: analysis.py  benchmark_parsing.py  data_generators.py  tikz_generators.py  unique_solves.py
paper-graphics/tests/: test_analysis.py  test_benchmark_parsing.py
plans/: benchmark-synthesis.org  bitwuzla-quantifier-support-plan.md  extra-logging.org  fault-localization.org  lab-eval.org  logging.org  prophecy.org  unbounded-proof.org
scarecrow/: bun.lockb  index.html  package.json  tailwind.config.js
scarecrow/src/: AuthProvider.tsx  FileProvider.tsx  fetch.tsx  index.css  main.tsx  routeTree.gen.ts  useIsLargeScreen.tsx
scripts/: README.md  build-ic3ia.sh  run-training.sh  s3_manager.py  setup-training.sh  top_bmc_cost_solved.py
smt2parser/: Cargo.toml
smt2parser/examples/: array_copy.vmt
smt2parser/src/: concrete.rs  constant_abstraction.rs  let_extract.rs  lib.rs  main.rs  parser.rs  renaming.rs  visitors.rs
src/: analysis.rs  array_axioms.rs  baml_client.rs  benchmark.rs  conflict_scheduler.rs  cost.rs  driver.rs  egg_utils.rs  extractor.rs  ic3ia.rs  interpolant.rs  lib.rs  logger.rs  main.rs  problem.rs  problem_context.rs  profiling.rs  proof_tree.rs  repl.rs  smt_problem.rs  smtlib_problem.rs  smtlib_smt_problem.rs  solver_interface.rs  subterm_handler.rs  theory_support.rs  utils.rs  vmt_problem.rs  z3_ext.rs  z3_var_context.rs
src/auxiliary_synthesis/: config.rs  conflict.rs  locality.rs  mod.rs  spec.rs  trigger.rs
src/cost_functions/: ast_size.rs  mod.rs  symbol_cost.rs  (+1 more)
terraform/: main.tf  terraform_runner.py  user_data.sh
tests/: integration_tests.rs  logging_tests.rs  snapshot_tests.rs
to_vmt/: Cargo.toml  README.md
to_vmt/src/: lib.rs  pretty_printer.rs  run_yardbird.rs  transition_system.rs  vmtil.rs
to_vmt/vmt_macros/: Cargo.toml
to_vmt/vmt_macros/src/: ensures.rs  harness.rs  lib.rs  verify.rs
to_vmt/vmtil/: Cargo.toml
to_vmt/vmtil/src/: ast.rs  context.rs  lib.rs  pretty_printer.rs  vmtil.rs
yardbird_eval/: aws_backend.py  cli.py  common.py  lab_backend.py  local_backend.py  object_store.py  proxmox.py
(+493 files in other folders)
