[package]
name = "yardbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.10"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.11.0"
egg = "0.9.5"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
smt2parser = { path = "./smt2parser", version = "0.6.1" }
z3 = { workspace = true }

[workspace.dependencies]
clap = { version = "4.5.20" }
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
z3 =  "0.12.1"

[dev-dependencies]
insta = "1.41.1"

[workspace]
members = [
    "coop",
    "smt2parser",
    "garden",
    "to_vmt",
    "to_vmt/vmt_macros",
    "to_vmt/vmtil"
]
