[package]
name = "yardbird"
version = "0.1.0"
edition = "2021"
default-run = "yardbird"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.10"
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dialoguer = "0.12.0"
dotenvy = "0.15"
egg = "0.10.0"
env_logger = "0.11.5"
itertools = "0.14.0"
num = "0.4"
rustc-hash = "2.1"
log = "0.4.22"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
smt2parser = { workspace = true }
tempfile = "3.17.1"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
z3 = { workspace = true }

# Optional: only included when training feature is enabled
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[features]
default = []
training = ["sqlx"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20" }
serde = "1.0.215"
serde_json = "1.0.133"
smt2parser = { path = "./smt2parser", version = "0.6.1" }
z3 = { version = "0.19.3" }

[dev-dependencies]
insta = "1.41.1"

[[bin]]
name = "yardbird"
path = "src/main.rs"

[workspace]
members = [
    "coop",
    "smt2parser",
    "garden",
    "to_vmt",
    "to_vmt/vmt_macros",
    "to_vmt/vmtil"
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
