[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-synth"
version = "0.1.0"
description = "Semantics-first VMT benchmark synthesis for Yardbird"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
benchmark-synth = "benchmark_synth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
