[package]
name = "to_vmt"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = "2.0.90"
smt2parser = { path = "../smt2parser/", version = "0.6.1" }
yardbird = { path = ".." }
quote = "1.0.37"
proc-macro2 = "1.0.92"
darling = "0.20.10"
z3 = { workspace = true }
pretty = "0.12.3"

[lib]
proc-macro = true
