[package]
name = "to_vmt"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = "2.0.90"
yardbird = { path = ".." }
quote = "1.0.37"
proc-macro2 = "1.0.92"
darling = "0.20.10"
smt2parser = { path = "../smt2parser" }
z3 = { workspace = true }
vmt_macros = { path = "vmt_macros" }
vmtil = { path = "vmtil" }
log = "0.4.25"
